--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ boto3-stubs = "^1.17.109"
 django-stubs = "^1.8.0"
 Flask = "^1"
 Django = "<4"
+pytest = "^6.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
