--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,3 +69,9 @@ pytest = "^6.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+  "ignore::DeprecationWarning:zappa.async",
+  "ignore::DeprecationWarning:past.builtins.misc"
+]
