--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ django-stubs = "^1.8.0"
 Flask = "^1"
 Django = "<4"
 pytest = "^6.2"
+pytest-cov = "^3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
